WebCore:

2009-06-01  Ben Murdoch  <benm@google.com>

        Reviewed by Darin Adler.  Landed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=25710

        Fix a bug that causes database transactions to fail if a history navigation to a hash fragment of the same document is made while resources (e.g. an XHR) are loading.

        Test: storage/hash-change-with-xhr.html

        * loader/DocumentLoader.cpp:
        (WebCore::DocumentLoader::stopLoading):
        * loader/DocumentLoader.h:
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::stopLoading):
        (WebCore::FrameLoader::stopAllLoaders):
        * loader/FrameLoader.h:
        * loader/FrameLoaderTypes.h:
        (WebCore::):
        * page/Page.cpp:
        (WebCore::Page::goToItem):

LayoutTests:

2009-06-02  Ben Murdoch  <benm@google.com>

        Reviewed by Darin Alder.  Landed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=25710

        Fix a bug that causes database transactions to fail if a history navigation to a hash fragment of the same document is made while resources (e.g. an XHR) are loading.

        * storage/hash-change-with-xhr-expected.txt: Added.
        * storage/hash-change-with-xhr.html: Added.



Canonical link: https://commits.webkit.org/36186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44351 268f45cc-cd09-0410-ab3c-d52691b4dbfc